--- a/combined-site.css
+++ b/combined-site.css
@@ -44,7 +44,6 @@
     font-weight: normal;
     font-style: normal;
 }
-                
 /* Top title section */
 
 #title {
@@ -129,24 +128,25 @@
 }
 
 #propStat {
-    padding-left: 10px; 
+    padding-left: 20px;
+    padding-right: 20px; 
+    max-width: 550px; 
      color: #4C6B8B;
     font-family: 'Reader Medium'; 
     font-size: 25px; 
     position: relative; 
-    top: 50%;
-    transform: translateY(-50%); 
     margin-top: 0px; 
     
 }
 
 #fundProp {
-    max-width: 100%; 
+    /*
     height: auto;
-    width: auto/9; 
-    margin-right: -150px;
+    width: auto/9.5; 
+    */
+    margin-right: -10px;
     padding-left: 0px; 
-    
+    padding-right: 20px; 
 }
 
 #fundSizeViz {
@@ -162,8 +162,8 @@
     display: flex; 
     align-items: center; 
     justify-content: space-between;   
-    margin-top: -170px; 
-    margin-bottom: 100px; 
+    margin-top: 0px; 
+    margin-bottom: 50px; 
 }
 
 #fund-size-main {
@@ -173,18 +173,16 @@
     left: 0; 
     margin-top: -50px; 
     margin-bottom: -50px; 
-    padding-top: -150px;
+    padding-top: -0px;
     padding-bottom: -150px;
 }
 #fundSizeStat {
     padding-left: 20px; 
-    margin-top: -100px; 
+    margin-top: -50px; 
     color: #4C6B8B;
     font-family: 'Reader Medium'; 
     font-size: 25px; 
-    position: relative; 
-    top: 50%;
-    transform: translateY(-50%); 
+    position: relative;  
     margin-top: 0px; 
     max-width: 500px; 
     height: auto; 
@@ -194,13 +192,13 @@
     position: relative; 
     display: inline-block; 
     width: 500px; 
-    top: 60px; 
+    top: 70px; 
     z-index: 90; 
     margin-right: 20px; 
 }
 
 .step {
-    margin-bottom: 50px; 
+    margin-bottom: 30px; 
     height: 700px; 
     text-align: justify; 
      display: flex;
